[gd_scene load_steps=4 format=2]

[ext_resource path="res://Table.gd" type="Script" id=1]
[ext_resource path="res://Box.tscn" type="PackedScene" id=2]
[ext_resource path="res://Rod.tscn" type="PackedScene" id=3]

[node name="Table" type="Spatial"]
script = ExtResource( 1 )

[node name="Top" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2.5, 0 )
Box_Size = Vector3( 150, 5, 50 )
Surface_Material = null

[node name="Leg1" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -67.5, -40, -17.5 )
Cylinder_Height = 70.0
Bottom_Radius = 3.75
Top_Radius = 3.75

[node name="Leg2" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -67.5, -40, 17.5 )
Cylinder_Height = 70.0
Bottom_Radius = 3.75
Top_Radius = 3.75

[node name="Leg3" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 67.5, -40, -17.5 )
Cylinder_Height = 70.0
Bottom_Radius = 3.75
Top_Radius = 3.75

[node name="Leg4" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 67.5, -40, 17.5 )
Cylinder_Height = 70.0
Bottom_Radius = 3.75
Top_Radius = 3.75
